--- a/naolo.ipynb
+++ b/naolo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7cL0UxQ0b15RiieQhadw0",
+      "authorship_tag": "ABX9TyPOvJy2pp/U8pFK2B3HogYo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -254,6 +254,21 @@
       ],
       "metadata": {
         "id": "WC3BAuJTlAFH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = FastYOLO(num_classes=20, width_multiplier=0.33, conv_layer=DynamicConv2d)\n",
+        "dummy = torch.randn(1, 3, 416, 416)\n",
+        "preds, anchors = model(dummy)\n",
+        "print(\"Predictions shape:\", preds.shape)\n",
+        "print(\"Anchors:\", anchors)"
+      ],
+      "metadata": {
+        "id": "xhDP6V5jmVNP"
       },
       "execution_count": null,
       "outputs": []
