--- a/naolo.ipynb
+++ b/naolo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOvJy2pp/U8pFK2B3HogYo",
+      "authorship_tag": "ABX9TyMfEgyFJH1ZtMfbLi/OzSei",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,15 +242,7 @@
         "            anchors: Tensor of shape [num_anchors, 2]\n",
         "        \"\"\"\n",
         "        preds = self.model(x)\n",
-        "        return preds, self.anchors\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    # Example usage\n",
-        "    model = FastYOLO(num_classes=20, width_multiplier=0.33, conv_layer=DynamicConv2d)\n",
-        "    dummy = torch.randn(1, 3, 416, 416)\n",
-        "    preds, anchors = model(dummy)\n",
-        "    print(\"Predictions shape:\", preds.shape)\n",
-        "    print(\"Anchors:\", anchors)\n"
+        "        return preds, self.anchors"
       ],
       "metadata": {
         "id": "WC3BAuJTlAFH"
